[ylj]: implement react-exercise-2

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,12 @@
 @import 'variables';
 
 html {
-  font-size: $base-font-size;
+  //font-size: $base-font-size;
 }
 
 body {
   font-family: $font-family;
-  font-size: 1em;
+  //font-size: 1em;
   background-color: $gray;
   color: $text-color;
 }
@@ -24,7 +24,7 @@ h3 {
 }
 
 p {
-  font-size: 1em;
+  //font-size: 1em;
 }
 
 h1,
