--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,69 @@
 @import 'styles/variables.scss';
 
 .app {
-  width: 600px;
+  width: 90%;
   margin: 80px auto $base-margin auto;
   background-color: $white;
+}
+
+header{
+  height:120px;
+  background-color: cornflowerblue;
+}
+.store{
+  color:white;
+  font-weight:bold;
+  font-size: 55px;
+  float:left;
+  line-height: 120px;
+  padding-left: 150px;
+}
+header section{
+  margin-left:98%;
+  line-height: 120px;
+}
+.cartImg{
+  whidth:20px;
+  height:20px;
+  margin-right:5px;
+}
+.phoneType{
+  font-size:30px;
+}
+.cartNum{
+  font-size:26px;
+  color:red;
+}
+.iphoneTitle{
+  padding:50px;
+  margin-left:260px;
+  font-size:40px;
+}
+.phoneType{
+  padding-bottom: 20px;
+  font-weight: bold;
+}
+.iphoneContent{
+  display: flex;
+  margin-left:260px;
+  flex-flow: row wrap;
+}
+.phoneSection{
+  flex:0 0 30%;
+  padding-left: 50px;
+  padding-bottom: 100px;
+}
+.phoneImg{
+  width:400px;
+  height:450px;
+}
+.price{
+  float:left;
+}
+.cart{
+  margin-left:170px;
+  background-color: #40a9ff;
+}
+.price,.cart{
+  margin-top:10px;
 }
